Kubernetes/echo-server-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: echo-server-dep
  annotations:
    kubernetes.io/change-cause: "new release"
spec:
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  selector:
    #    matchLabels:
    #      app-name: echo-server
    matchExpressions:
      - key: app-name
        values:
          - echo-server
          - echo
        operator: In
  template:
    metadata:
      namespace: training
      labels:
        app-name: echo-server
    spec:
      containers:
        - name: echo-server
          image: landrzejewski/echo-server:v2
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: 64M
            limits:
              memory: 128M
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
            failureThreshold: 3
          readinessProbe:
              httpGet:
                path: /
                port: 8080
              periodSeconds: 3
              successThreshold: 3
