Kubernetes/echo-server-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server-pod
  namespace: training
  labels: 
    version: "v1"
    env: "dev"
spec:
  containers:
  - name: echo-server
    image: landrzejewski/echo-server #echo-server-unhealthy
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "64M"
        cpu: "250m"
      limits:
        memory: "128M"
        cpu: "500m"
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 30
      periodSeconds: 3
      failureThreshold: 3
