Kubernetes/updater-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: updater-dep
  namespace: training
spec:
  selector:
    matchLabels:
      app-name: updater
  template:
    metadata:
      labels:
        app-name: updater
    spec:
      containers:
        - name: updater
#          image: landrzejewski/updater:v1
#          args:
#            - "20"

          image: landrzejewski/updater:v2
#          env:
#            - name: INTERVAL
#              value: "20"

#              valueFrom:
#                configMapKeyRef:
#                  key: INTERVAL
#                  name: updater-cm

          volumeMounts:
            - mountPath: /storage
              name: storage
            - mountPath: /config
              name: config

      volumes:
        - name: storage
#          hostPath:
#            path: /tmp/storage
          persistentVolumeClaim:
            claimName: storage-pvc
        - name: config
          configMap:
            name: updater-cm
