Kubernetes/updater-pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: updater-pod
spec:
  containers:
    - name: updater
      volumeMounts:
        -  name: storage
           mountPath: /storage
        -  name: config
           mountPath: /config

#      image: landrzejewski/updater:v1
#      args:
#        - "10"
      
#      image: landrzejewski/updater:v2
#      env:
#        - name: INTERVAL
#          value: "10"
      
#      image: landrzejewski/updater:v2
#      env:
#        - name: INTERVAL
#          valueFrom:
#            configMapKeyRef:
#              name: updater-config-map
#              key: INTERVAL

      image: landrzejewski/updater:v2
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: storage-persistence-volume-claim
#      hostPath:
#        path: /tmp/storage
    - name: config
      configMap:
        name: updater-config-map
