Kubernetes/app.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: training
  name: postgres-pod
  labels:
    app-name: postgres
spec:
  nodeSelector:
    storage: "true"
  containers:
    - name: postgres
      image: postgres:17-alpine
      ports:
        - containerPort: 5432
          name: db
      volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: postgres-persistence-volume-claim
    - name: init-scripts
      hostPath:
        path: /tmp/postgres-scripts
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: postgres-service
spec:
  selector:
    app-name: postgres
  ports:
    - port: 5432
      targetPort: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: training
  name: users-deployment
  annotations:
    kubernetes.io/change-cause: "initial release"
spec:
  replicas: 3
  selector:
    matchLabels:
      app-name: users
  template:
    metadata:
      namespace: training
      labels:
        app-name: users
    spec:
      containers:
        - name: users
          image: landrzejewski/users:latest
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: 64M
            limits:
              memory: 128M
---
apiVersion: v1
kind: Service
metadata:
  namespace: training
  name: users-service
spec:
  selector:
    app-name: users
  ports:
    - port: 80
      targetPort: http
