Kubernetes/ingress-routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: training
  name: ingress-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - path: /api/echo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server-svc
                port:
                  number: 80
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-server-svc
                port:
                  number: 80
#          - path: /echo
#            pathType: Prefix
#            backend:
#              service:
#                name: echo-service
#                port:
#                  number: 80
